# CityBuilder_SFML_SR

./: README.md
_assets/sprites/: Trees.png.pxo
api/: CMakeLists.txt
api/include/ai/: npc.h  npc_behaviour_tree.h  npc_factory.h  npc_manager.h
api/include/audio/: audio_manager.h
api/include/gameplay/: building.h  building_manager.h
api/include/graphics/: tilemap.h
api/include/ressources/: ressource.h  ressource_manager.h
api/include/ui/: button.h  button_factory.h  clickable.h  resource_ui.h
api/src/ai/: npc.cc  npc_behaviour_tree.cc  npc_manager.cc
api/src/audio/: audio_manager.cc
api/src/gameplay/: building.cc  building_manger.cc
api/src/graphics/: tilemap.cc
api/src/motion/: path.cc
api/src/ui/: button.cc  clickable.cc  resource_ui.cc
core/: CMakeLists.txt
game/src/: game.cc
